[package]
name = "indonesian_geocoder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework async
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }

# Database (SQLite)
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Geospatial calculations
geo = "0.27.0"
geo-types = "0.7.12"
geozero = { version = "0.11.0", features = ["with-wkb", "with-geo"] }

# Utilities
reqwest = { version = "0.11.24", features = ["stream"] }
futures-util = "0.3.30"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
